[package]
name = "ext"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1"
dioxus = "0.4"
dioxus-web = "0.4"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["console", "XmlHttpRequest"] }
js-sys = "0.3.69"
tracing-wasm="0.2"
